2009-09-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #11436: Unknown tables break Install-Tool (Thanks to David Bruchmann)

2008-02-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7295: Uninitialized variable in ->handler_getFromTableList() (Patch by Oliver Klee)

2007-05-30  Karsten Dambekalns <karsten@typo3.org>

	* Added default values and some usability improvements to cached info display in debug module (closes bug #3750)
	* EXPLAIN PLAN support for Oracle (closes bug #3850)
	* Fixed a warning when using admin_get_fields() on a non-existent table
	* Fixed a bug causing inserts with more than one affected CLOB field to fail
	* quoteWhereClause() now die()s when the input cannot be parsed by parseWhereClause()
	* PHP backtraces can be logged with the queries now (closes bug #3856)

2007-05-29  Karsten Dambekalns <karsten@typo3.org>

	* Closes bug #4462: creates tables without OIDs on PostgreSQL now
	* Closes bugs #4494, #3759: & is translated to BITAND() on Oracle now
	* Large text fields are CLOB fields now; for Oracle LIKE comparisons against such fields are translated to dbms_lob.instr() calls. This should fix e.g. bug #5535 as well as issues with TV data that cannot be unserialized (see comments on bug #4638)
	* Updates to the manual
	* A fix for bug #5481, field mapping not working on the right side of a comparison in WHERE clauses
	* Fixed bugs #2438 and #4496 about quoting of DISTINCT in SELECT clauses

2006-07-19  Karsten Dambekalns <karsten@typo3.org>

	* Fixes SQL issues when searching in list view or with the global search box on the bottom of the BE page

2006-06-30  Karsten Dambekalns <karsten@typo3.org>

	* this update closes bugs #3638, #2106, #2866, #3754 (for Firefox, broken in MSIE) and maybe a few more
	* Implemented support for sysLog() on connection failure
	* DBAL now honours the no_pconnect setting
	* For handlers in native mode the setDBinit queries are executed upon connection